# urfu_proj

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.yaml  project_notes.md  project_report.md
include/: Config.hpp  Game.hpp  Particle.hpp  SpawnZone.hpp  Zone.hpp
src/: Config.cpp  Game.cpp  Particle.cpp  SpawnZone.cpp  Zone.cpp  main.cpp
src/core/: Config.cpp  Config.hpp  Simulation.cpp  Simulation.hpp  SimulationPhysics.cpp  SimulationSpawn.cpp  Types.hpp
src/entities/: Environment.cpp  Environment.hpp  Field.cpp  Field.hpp  Particle.cpp  Particle.hpp  Zone.cpp  Zone.hpp
src/graphics/: Visualizer.cpp  Visualizer.hpp
src/physics/: Physics.cpp  Physics.hpp
src/simulation/: Environment.cpp  Environment.hpp  Particle.cpp  Zone.cpp  Zone.hpp
tools/: optimize_fields.py  plot_optimization_log.py
